Fixed having part of the sections cut off when changing between them.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -39,7 +39,7 @@ a {
   min-height: 100%;
 }
 .main {
-  margin-top: 51px;
+  padding-top: 51px;
   overflow: auto;
   padding-bottom: $footerHeight;
 }
@@ -237,17 +237,17 @@ a {
 }
 
 //Weather Styles
-#weather{
-  .sections-wrapper{
-    padding-top:30px;
+#weather {
+  .sections-wrapper {
+    padding-top: 30px;
   }
 }
 .weather-query {
   margin-top: 30px;
-  @extend .todo-add
+  @extend .todo-add;
 }
-.city-name{
-  padding-left:15px;
+.city-name {
+  padding-left: 15px;
 }
 .current-weather {
   .weather {
